--- a/index.html
+++ b/index.html
@@ -1,1 +1,73 @@
+<!DOCTYPE html>
+<html lang="en">
+<head>
+  <meta charset="UTF-8">
+  <title>Tiffany Hall | Interior Design Portfolio</title>
+  <meta name="viewport" content="width=device-width, initial-scale=1.0">
+  <link rel="stylesheet" href="style.css">
+</head>
+
+<body>
+
+<header>
+  <h1>Tiffany Hall</h1>
+  <p class="subtitle">Interior Designer</p>
+</header>
+
+<nav>
+  <a href="#work">Work</a>
+  <a href="#about">About</a>
+  <a href="#contact">Contact</a>
+</nav>
+
+<section class="hero">
+  <p>
+    Thoughtful interior spaces blending function, elegance, and atmosphere.
+  </p>
+</section>
+
+<section id="work">
+  <h2>Selected Work</h2>
+
+  <div class="gallery">
+    <img src="images/project1.jpg" alt="Interior Design Project">
+    <img src="images/project2.jpg" alt="Interior Design Project">
+    <img src="images/project3.jpg" alt="Interior Design Project">
+    <img src="images/project4.jpg" alt="Interior Design Project">
+  </div>
+
+  <p class="note">
+    Floorplans, renders, and completed spaces available upon request.
+  </p>
+</section>
+
+<section id="about">
+  <h2>About</h2>
+  <p>
+    I am an interior designer focused on creating refined, functional spaces
+    through a balance of spatial planning, materiality, and atmosphere.
+    My work spans concept development, detailed floorplans, 3D renders,
+    and finished interiors.
+  </p>
+</section>
+
+<section id="contact">
+  <h2>Contact</h2>
+
+  <!-- FREE contact form via Formspree -->
+  <form action="https://formspree.io/f/your-form-id" method="POST">
+    <input type="text" name="name" placeholder="Your Name" required>
+    <input type="email" name="email" placeholder="Your Email" required>
+    <textarea name="message" placeholder="Your Message" required></textarea>
+    <button type="submit">Send Message</button>
+  </form>
+
+</section>
+
+<footer>
+  <p>© 2025 Tiffany Hall</p>
+</footer>
+
+</body>
+</html>
 
