--- a/index.html
+++ b/index.html
@@ -31,9 +31,9 @@
 
 <div class="gallery">
 
-  <a href="project-lobby.html" class="gallery-item">
-    <img src="images/render.jpg" alt="Lobby Concept Render">
-    <div class="caption">Lobby Concept Render</div>
+  <a href="project-Amane Wellness.html" class="gallery-item">
+    <img src="images/render.jpg" alt="Amane Wellness Render">
+    <div class="caption">Amane Wellness Render</div>
   </a>
 
   <a href="project-manzi.html" class="gallery-item">
