--- a/index.html
+++ b/index.html
@@ -12,6 +12,7 @@
 <header>
   <h1>Tiffany Hall</h1>
   <p class="subtitle">Interior Designer</p>
+  <button id="darkModeToggle">Dark Mode</button>
 </header>
 
 <nav>
@@ -29,31 +30,29 @@
 <section id="work">
   <h2>Selected Work</h2>
 
-<div class="gallery">
+  <div class="gallery">
 
-  <a href="project-Amane Wellness.html" class="gallery-item">
-    <img src="images/render.jpg" alt="Amane Wellness Render">
-    <div class="caption">Amane Wellness Render</div>
-  </a>
+    <a href="project-Amane Wellness.html" class="gallery-item">
+      <img src="images/render.jpg" alt="Amane Wellness Render">
+      <div class="caption">Amane Wellness Render</div>
+    </a>
 
-  <a href="project-manzi.html" class="gallery-item">
-    <img src="images/manzi1.jpg" alt="Residential Living Space">
-    <div class="caption">Residential Living Space</div>
-  </a>
+    <a href="project-manzi.html" class="gallery-item">
+      <img src="images/manzi1.jpg" alt="Residential Living Space">
+      <div class="caption">Residential Living Space</div>
+    </a>
 
-  <a href="project-lighting.html" class="gallery-item">
-    <img src="images/manzi2.jpg" alt="Custom Lighting Detail">
-    <div class="caption">Custom Lighting Detail</div>
-  </a>
+    <a href="project-lighting.html" class="gallery-item">
+      <img src="images/manzi2.jpg" alt="Custom Lighting Detail">
+      <div class="caption">Custom Lighting Detail</div>
+    </a>
 
-  <a href="project-materials.html" class="gallery-item">
-    <img src="images/manzi3.jpg" alt="Material & Texture Study">
-    <div class="caption">Material & Texture Study</div>
-  </a>
+    <a href="project-materials.html" class="gallery-item">
+      <img src="images/manzi3.jpg" alt="Material & Texture Study">
+      <div class="caption">Material & Texture Study</div>
+    </a>
 
-</div>
-
-
+  </div>
 
   <p class="note">
     Floorplans, renders, and completed spaces available upon request.
@@ -79,7 +78,6 @@
 <section id="contact">
   <h2>Contact</h2>
 
-  <!-- FREE contact form via Formspree -->
   <form action="https://formspree.io/f/your-form-id" method="POST">
     <input type="text" name="name" placeholder="Your Name" required>
     <input type="email" name="email" placeholder="Your Email" required>
@@ -92,30 +90,7 @@
 <footer>
   <p>© 2025 Tiffany Hall</p>
 </footer>
-  
-<script>
-  document.querySelectorAll('nav a').forEach(anchor => {
-    anchor.addEventListener('click', function(e) {
-      e.preventDefault();
-      const target = document.querySelector(this.getAttribute('href'));
-      target.scrollIntoView({ behavior: 'smooth' });
-    });
-  });
-</script>
-<script>
-  const sections = document.querySelectorAll('section');
 
-  const observer = new IntersectionObserver(entries => {
-    entries.forEach(entry => {
-      if(entry.isIntersecting) {
-        entry.target.classList.add('visible');
-      }
-    });
-  }, { threshold: 0.2 });
-
-  sections.forEach(section => observer.observe(section));
-</script>
-
+<script src="script.js"></script>
 </body>
 </html>
-
