--- a/index.html
+++ b/index.html
@@ -12,8 +12,9 @@
 <header>
   <h1>Tiffany Hall</h1>
   <p class="subtitle">Interior Designer</p>
-  <button id="darkModeToggle">
-  </button>
+
+  <!-- Dark mode toggle -->
+  <button id="darkModeToggle">Dark mode</button>
 </header>
 
 <nav>
@@ -62,23 +63,23 @@
 
 <section id="about">
   <h2>About</h2>
+
   <div class="about-content">
     <img src="images/profile.jpg" alt="Tiffany Hall" class="profile-photo">
     <p>
       I am an interior designer drawn to exploring the dynamics of design and how spaces can be tailored to reflect
-      unique needs and personalities of each client. I am passionate about creating intimate environements
+      unique needs and personalities of each client. I am passionate about creating intimate environments
       that are both functional and emotionally resonant, using materials, colours and sensory 
-      elements to evoke a deep connection wiht the space and the client. 
+      elements to evoke a deep connection with the space and the client.
 
       Sustainability is a key focus in my work. I believe it is essential to design with an awareness of 
-      the environement, finding ways to integrate aspects into every project. 
+      the environment, finding ways to integrate aspects into every project.
 
       Additionally, as someone who is half Cantonese and half English, I am inspired by cultural diversity and how 
-      traditions and aesthetics can inform yet also elevate a design. 
+      traditions and aesthetics can inform yet also elevate a design.
     </p>
   </div>
 </section>
-
 
 <section id="contact">
   <h2>Contact</h2>
@@ -89,7 +90,6 @@
     <textarea name="message" placeholder="Your Message" required></textarea>
     <button type="submit">Send Message</button>
   </form>
-
 </section>
 
 <footer>
