--- a/index.html
+++ b/index.html
@@ -34,7 +34,7 @@
 
   <div class="gallery">
 
-    <a href="project-Amane Wellness.html" class="gallery-item">
+    <a href="project-amane-wellness.html" class="gallery-item">
       <img src="images/render.jpg" alt="Amane Wellness Render">
       <div class="caption">Amane Wellness Render</div>
     </a>
