--- a/project-amane-wellness.html
+++ b/project-amane-wellness.html
@@ -43,9 +43,9 @@
 </section>
 
 <section class="project-gallery">
-  <img src="images/render.jpg" alt="Amane Wellness Render 1">
-  <img src="images/manzi1.jpg" alt="Amane Wellness Render 2">
-  <img src="images/manzi2.jpg" alt="Amane Wellness Render 3">
+  <img src="images/amane-01.jpg" alt="Amane Wellness – Treatment Space">
+  <img src="images/amane-02.jpg" alt="Amane Wellness – Reception Area">
+  <img src="images/amane-03.jpg" alt="Amane Wellness – Material Detail">
 </section>
 
 <footer>
