Update project-amane-wellness images

--- a/project-amane-wellness.html
+++ b/project-amane-wellness.html
@@ -43,9 +43,9 @@
 </section>
 
 <section class="project-gallery">
-  <img src="images/amane-01.jpg" alt="Amane Wellness – Treatment Space">
-  <img src="images/amane-02.jpg" alt="Amane Wellness – Reception Area">
-  <img src="images/amane-03.jpg" alt="Amane Wellness – Material Detail">
+  <img src="images/amane-wellness/Floorplanrender.png" alt="Amane Wellness – Rendered Floorplan">
+  <img src="images/amane-wellness/SectionArender.png" alt="Amane Wellness – Rendered Section">
+  <img src="images/amane-wellness/SectionBrender.png" alt="Amane Wellness – Rendered Section">
 </section>
 
 <footer>
